BCC_BCC36B__P3_Noemi_1563882_Geracao/implementação/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> lista_declaracoes
Rule 2     lista_declaracoes -> lista_declaracoes declaracao
Rule 3     lista_declaracoes -> declaracao
Rule 4     lista_declaracoes -> error
Rule 5     declaracao -> declaracao_variaveis
Rule 6     declaracao -> inicializacao_variaveis
Rule 7     declaracao -> declaracao_funcao
Rule 8     declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis
Rule 9     declaracao_variaveis -> tipo DOIS_PONTOS error
Rule 10    inicializacao_variaveis -> atribuicao
Rule 11    lista_variaveis -> var VIRGULA lista_variaveis
Rule 12    lista_variaveis -> var
Rule 13    var -> ID
Rule 14    var -> ID indice
Rule 15    indice -> indice ABRE_COL expressao FECHA_COL
Rule 16    indice -> ABRE_COL expressao FECHA_COL
Rule 17    tipo -> INTEIRO
Rule 18    tipo -> FLUTUANTE
Rule 19    declaracao_funcao -> tipo cabecalho
Rule 20    declaracao_funcao -> cabecalho
Rule 21    cabecalho -> ID ABRE_PAR lista_parametros FECHA_PAR corpo FIM
Rule 22    lista_parametros -> lista_parametros VIRGULA parametro
Rule 23    lista_parametros -> parametro
Rule 24    lista_parametros -> vazio
Rule 25    parametro -> tipo DOIS_PONTOS ID
Rule 26    parametro -> parametro ABRE_COL FECHA_COL
Rule 27    corpo -> corpo acao
Rule 28    corpo -> vazio
Rule 29    acao -> expressao
Rule 30    acao -> declaracao_variaveis
Rule 31    acao -> se
Rule 32    acao -> repita
Rule 33    acao -> leia
Rule 34    acao -> escreva
Rule 35    acao -> retorna
Rule 36    acao -> error
Rule 37    se -> SE expressao ENTAO corpo FIM
Rule 38    se -> SE expressao ENTAO corpo SENAO corpo FIM
Rule 39    repita -> REPITA corpo ate
Rule 40    ate -> ATE expressao
Rule 41    atribuicao -> var ATRIBUT expressao
Rule 42    leia -> LEIA ABRE_PAR ID FECHA_PAR
Rule 43    escreva -> ESCREVA ABRE_PAR expressao FECHA_PAR
Rule 44    retorna -> RETORNA ABRE_PAR expressao FECHA_PAR
Rule 45    expressao -> expressao_logica
Rule 46    expressao -> atribuicao
Rule 47    expressao_logica -> expressao_simples
Rule 48    expressao_logica -> expressao_logica operador_logico expressao_simples
Rule 49    expressao_simples -> expressao_aditiva
Rule 50    expressao_simples -> expressao_simples operador_relacional expressao_aditiva
Rule 51    expressao_aditiva -> expressao_multiplicativa
Rule 52    expressao_aditiva -> expressao_aditiva operador_soma expressao_multiplicativa
Rule 53    expressao_multiplicativa -> expressao_unaria
Rule 54    expressao_multiplicativa -> expressao_multiplicativa operador_multiplicacao expressao_unaria
Rule 55    expressao_unaria -> fator
Rule 56    expressao_unaria -> operador_soma fator
Rule 57    operador_relacional -> MENOR
Rule 58    operador_relacional -> MAIOR
Rule 59    operador_relacional -> IGUAL
Rule 60    operador_relacional -> DIFERENCA
Rule 61    operador_relacional -> MENOR_IGUAL
Rule 62    operador_relacional -> MAIOR_IGUAL
Rule 63    operador_relacional -> NEGACAO
Rule 64    operador_logico -> E_LOGICO
Rule 65    operador_logico -> OU_LOGICO
Rule 66    operador_soma -> SOMA
Rule 67    operador_soma -> SUB
Rule 68    operador_multiplicacao -> MULT
Rule 69    operador_multiplicacao -> DIVISAO
Rule 70    fator -> ABRE_COL expressao FECHA_COL
Rule 71    fator -> var
Rule 72    fator -> chamada_funcao
Rule 73    fator -> numero
Rule 74    numero -> INTEIRO
Rule 75    numero -> FLUTUANTE
Rule 76    numero -> NOTACAO_CIENTIFICA
Rule 77    chamada_funcao -> ID ABRE_PAR lista_argumentos FECHA_PAR
Rule 78    lista_argumentos -> lista_argumentos VIRGULA expressao
Rule 79    lista_argumentos -> expressao
Rule 80    lista_argumentos -> vazio
Rule 81    vazio -> <empty>

Terminals, with rules where they appear

ABRE_COL             : 15 16 26 70
ABRE_PAR             : 21 42 43 44 77
ATE                  : 40
ATRIBUT              : 41
DIFERENCA            : 60
DIVISAO              : 69
DOIS_PONTOS          : 8 9 25
ENTAO                : 37 38
ESCREVA              : 43
E_LOGICO             : 64
FECHA_COL            : 15 16 26 70
FECHA_PAR            : 21 42 43 44 77
FIM                  : 21 37 38
FLUTUANTE            : 18 75
ID                   : 13 14 21 25 42 77
IGUAL                : 59
INTEIRO              : 17 74
LEIA                 : 42
MAIOR                : 58
MAIOR_IGUAL          : 62
MENOR                : 57
MENOR_IGUAL          : 61
MULT                 : 68
NEGACAO              : 63
NOTACAO_CIENTIFICA   : 76
OU_LOGICO            : 65
REPITA               : 39
RETORNA              : 44
SE                   : 37 38
SENAO                : 38
SOMA                 : 66
SUB                  : 67
VIRGULA              : 11 22 78
error                : 4 9 36

Nonterminals, with rules where they appear

acao                 : 27
ate                  : 39
atribuicao           : 10 46
cabecalho            : 19 20
chamada_funcao       : 72
corpo                : 21 27 37 38 38 39
declaracao           : 2 3
declaracao_funcao    : 7
declaracao_variaveis : 5 30
escreva              : 34
expressao            : 15 16 29 37 38 40 41 43 44 70 78 79
expressao_aditiva    : 49 50 52
expressao_logica     : 45 48
expressao_multiplicativa : 51 52 54
expressao_simples    : 47 48 50
expressao_unaria     : 53 54
fator                : 55 56
indice               : 14 15
inicializacao_variaveis : 6
leia                 : 33
lista_argumentos     : 77 78
lista_declaracoes    : 1 2
lista_parametros     : 21 22
lista_variaveis      : 8 11
numero               : 73
operador_logico      : 48
operador_multiplicacao : 54
operador_relacional  : 50
operador_soma        : 52 56
parametro            : 22 23 26
programa             : 0
repita               : 32
retorna              : 35
se                   : 31
tipo                 : 8 9 19 25
var                  : 11 12 41 71
vazio                : 24 28 80

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . lista_declaracoes
    (2) lista_declaracoes -> . lista_declaracoes declaracao
    (3) lista_declaracoes -> . declaracao
    (4) lista_declaracoes -> . error
    (5) declaracao -> . declaracao_variaveis
    (6) declaracao -> . inicializacao_variaveis
    (7) declaracao -> . declaracao_funcao
    (8) declaracao_variaveis -> . tipo DOIS_PONTOS lista_variaveis
    (9) declaracao_variaveis -> . tipo DOIS_PONTOS error
    (10) inicializacao_variaveis -> . atribuicao
    (19) declaracao_funcao -> . tipo cabecalho
    (20) declaracao_funcao -> . cabecalho
    (17) tipo -> . INTEIRO
    (18) tipo -> . FLUTUANTE
    (41) atribuicao -> . var ATRIBUT expressao
    (21) cabecalho -> . ID ABRE_PAR lista_parametros FECHA_PAR corpo FIM
    (13) var -> . ID
    (14) var -> . ID indice

    error           shift and go to state 7
    INTEIRO         shift and go to state 3
    FLUTUANTE       shift and go to state 4
    ID              shift and go to state 9

    declaracao_funcao              shift and go to state 1
    programa                       shift and go to state 10
    atribuicao                     shift and go to state 2
    var                            shift and go to state 8
    tipo                           shift and go to state 11
    lista_declaracoes              shift and go to state 5
    declaracao_variaveis           shift and go to state 12
    declaracao                     shift and go to state 6
    inicializacao_variaveis        shift and go to state 13
    cabecalho                      shift and go to state 14

state 1

    (7) declaracao -> declaracao_funcao .

    INTEIRO         reduce using rule 7 (declaracao -> declaracao_funcao .)
    FLUTUANTE       reduce using rule 7 (declaracao -> declaracao_funcao .)
    ID              reduce using rule 7 (declaracao -> declaracao_funcao .)
    $end            reduce using rule 7 (declaracao -> declaracao_funcao .)


state 2

    (10) inicializacao_variaveis -> atribuicao .

    INTEIRO         reduce using rule 10 (inicializacao_variaveis -> atribuicao .)
    FLUTUANTE       reduce using rule 10 (inicializacao_variaveis -> atribuicao .)
    ID              reduce using rule 10 (inicializacao_variaveis -> atribuicao .)
    $end            reduce using rule 10 (inicializacao_variaveis -> atribuicao .)


state 3

    (17) tipo -> INTEIRO .

    DOIS_PONTOS     reduce using rule 17 (tipo -> INTEIRO .)
    ID              reduce using rule 17 (tipo -> INTEIRO .)


state 4

    (18) tipo -> FLUTUANTE .

    DOIS_PONTOS     reduce using rule 18 (tipo -> FLUTUANTE .)
    ID              reduce using rule 18 (tipo -> FLUTUANTE .)


state 5

    (1) programa -> lista_declaracoes .
    (2) lista_declaracoes -> lista_declaracoes . declaracao
    (5) declaracao -> . declaracao_variaveis
    (6) declaracao -> . inicializacao_variaveis
    (7) declaracao -> . declaracao_funcao
    (8) declaracao_variaveis -> . tipo DOIS_PONTOS lista_variaveis
    (9) declaracao_variaveis -> . tipo DOIS_PONTOS error
    (10) inicializacao_variaveis -> . atribuicao
    (19) declaracao_funcao -> . tipo cabecalho
    (20) declaracao_funcao -> . cabecalho
    (17) tipo -> . INTEIRO
    (18) tipo -> . FLUTUANTE
    (41) atribuicao -> . var ATRIBUT expressao
    (21) cabecalho -> . ID ABRE_PAR lista_parametros FECHA_PAR corpo FIM
    (13) var -> . ID
    (14) var -> . ID indice

    $end            reduce using rule 1 (programa -> lista_declaracoes .)
    INTEIRO         shift and go to state 3
    FLUTUANTE       shift and go to state 4
    ID              shift and go to state 9

    declaracao_funcao              shift and go to state 1
    atribuicao                     shift and go to state 2
    var                            shift and go to state 8
    tipo                           shift and go to state 11
    declaracao_variaveis           shift and go to state 12
    declaracao                     shift and go to state 15
    inicializacao_variaveis        shift and go to state 13
    cabecalho                      shift and go to state 14

state 6

    (3) lista_declaracoes -> declaracao .

    INTEIRO         reduce using rule 3 (lista_declaracoes -> declaracao .)
    FLUTUANTE       reduce using rule 3 (lista_declaracoes -> declaracao .)
    ID              reduce using rule 3 (lista_declaracoes -> declaracao .)
    $end            reduce using rule 3 (lista_declaracoes -> declaracao .)


state 7

    (4) lista_declaracoes -> error .

    INTEIRO         reduce using rule 4 (lista_declaracoes -> error .)
    FLUTUANTE       reduce using rule 4 (lista_declaracoes -> error .)
    ID              reduce using rule 4 (lista_declaracoes -> error .)
    $end            reduce using rule 4 (lista_declaracoes -> error .)


state 8

    (41) atribuicao -> var . ATRIBUT expressao

    ATRIBUT         shift and go to state 16


state 9

    (21) cabecalho -> ID . ABRE_PAR lista_parametros FECHA_PAR corpo FIM
    (13) var -> ID .
    (14) var -> ID . indice
    (15) indice -> . indice ABRE_COL expressao FECHA_COL
    (16) indice -> . ABRE_COL expressao FECHA_COL

    ABRE_PAR        shift and go to state 18
    ATRIBUT         reduce using rule 13 (var -> ID .)
    ABRE_COL        shift and go to state 19

    indice                         shift and go to state 17

state 10

    (0) S' -> programa .



state 11

    (8) declaracao_variaveis -> tipo . DOIS_PONTOS lista_variaveis
    (9) declaracao_variaveis -> tipo . DOIS_PONTOS error
    (19) declaracao_funcao -> tipo . cabecalho
    (21) cabecalho -> . ID ABRE_PAR lista_parametros FECHA_PAR corpo FIM

    DOIS_PONTOS     shift and go to state 20
    ID              shift and go to state 22

    cabecalho                      shift and go to state 21

state 12

    (5) declaracao -> declaracao_variaveis .

    INTEIRO         reduce using rule 5 (declaracao -> declaracao_variaveis .)
    FLUTUANTE       reduce using rule 5 (declaracao -> declaracao_variaveis .)
    ID              reduce using rule 5 (declaracao -> declaracao_variaveis .)
    $end            reduce using rule 5 (declaracao -> declaracao_variaveis .)


state 13

    (6) declaracao -> inicializacao_variaveis .

    INTEIRO         reduce using rule 6 (declaracao -> inicializacao_variaveis .)
    FLUTUANTE       reduce using rule 6 (declaracao -> inicializacao_variaveis .)
    ID              reduce using rule 6 (declaracao -> inicializacao_variaveis .)
    $end            reduce using rule 6 (declaracao -> inicializacao_variaveis .)


state 14

    (20) declaracao_funcao -> cabecalho .

    INTEIRO         reduce using rule 20 (declaracao_funcao -> cabecalho .)
    FLUTUANTE       reduce using rule 20 (declaracao_funcao -> cabecalho .)
    ID              reduce using rule 20 (declaracao_funcao -> cabecalho .)
    $end            reduce using rule 20 (declaracao_funcao -> cabecalho .)


state 15

    (2) lista_declaracoes -> lista_declaracoes declaracao .

    INTEIRO         reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    FLUTUANTE       reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    ID              reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    $end            reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)


state 16

    (41) atribuicao -> var ATRIBUT . expressao
    (45) expressao -> . expressao_logica
    (46) expressao -> . atribuicao
    (47) expressao_logica -> . expressao_simples
    (48) expressao_logica -> . expressao_logica operador_logico expressao_simples
    (41) atribuicao -> . var ATRIBUT expressao
    (49) expressao_simples -> . expressao_aditiva
    (50) expressao_simples -> . expressao_simples operador_relacional expressao_aditiva
    (13) var -> . ID
    (14) var -> . ID indice
    (51) expressao_aditiva -> . expressao_multiplicativa
    (52) expressao_aditiva -> . expressao_aditiva operador_soma expressao_multiplicativa
    (53) expressao_multiplicativa -> . expressao_unaria
    (54) expressao_multiplicativa -> . expressao_multiplicativa operador_multiplicacao expressao_unaria
    (55) expressao_unaria -> . fator
    (56) expressao_unaria -> . operador_soma fator
    (70) fator -> . ABRE_COL expressao FECHA_COL
    (71) fator -> . var
    (72) fator -> . chamada_funcao
    (73) fator -> . numero
    (66) operador_soma -> . SOMA
    (67) operador_soma -> . SUB
    (77) chamada_funcao -> . ID ABRE_PAR lista_argumentos FECHA_PAR
    (74) numero -> . INTEIRO
    (75) numero -> . FLUTUANTE
    (76) numero -> . NOTACAO_CIENTIFICA

    ID              shift and go to state 38
    ABRE_COL        shift and go to state 39
    SOMA            shift and go to state 30
    SUB             shift and go to state 24
    INTEIRO         shift and go to state 40
    FLUTUANTE       shift and go to state 28
    NOTACAO_CIENTIFICA shift and go to state 35

    atribuicao                     shift and go to state 23
    expressao_multiplicativa       shift and go to state 37
    expressao_aditiva              shift and go to state 26
    expressao_unaria               shift and go to state 27
    operador_soma                  shift and go to state 29
    numero                         shift and go to state 31
    fator                          shift and go to state 32
    chamada_funcao                 shift and go to state 41
    expressao_logica               shift and go to state 25
    expressao                      shift and go to state 36
    var                            shift and go to state 33
    expressao_simples              shift and go to state 34

state 17

    (14) var -> ID indice .
    (15) indice -> indice . ABRE_COL expressao FECHA_COL

  ! shift/reduce conflict for ABRE_COL resolved as shift
    ATRIBUT         reduce using rule 14 (var -> ID indice .)
    MULT            reduce using rule 14 (var -> ID indice .)
    DIVISAO         reduce using rule 14 (var -> ID indice .)
    SOMA            reduce using rule 14 (var -> ID indice .)
    SUB             reduce using rule 14 (var -> ID indice .)
    MENOR           reduce using rule 14 (var -> ID indice .)
    MAIOR           reduce using rule 14 (var -> ID indice .)
    IGUAL           reduce using rule 14 (var -> ID indice .)
    DIFERENCA       reduce using rule 14 (var -> ID indice .)
    MENOR_IGUAL     reduce using rule 14 (var -> ID indice .)
    MAIOR_IGUAL     reduce using rule 14 (var -> ID indice .)
    NEGACAO         reduce using rule 14 (var -> ID indice .)
    E_LOGICO        reduce using rule 14 (var -> ID indice .)
    OU_LOGICO       reduce using rule 14 (var -> ID indice .)
    FECHA_PAR       reduce using rule 14 (var -> ID indice .)
    FECHA_COL       reduce using rule 14 (var -> ID indice .)
    VIRGULA         reduce using rule 14 (var -> ID indice .)
    INTEIRO         reduce using rule 14 (var -> ID indice .)
    FLUTUANTE       reduce using rule 14 (var -> ID indice .)
    ID              reduce using rule 14 (var -> ID indice .)
    $end            reduce using rule 14 (var -> ID indice .)
    FIM             reduce using rule 14 (var -> ID indice .)
    error           reduce using rule 14 (var -> ID indice .)
    SE              reduce using rule 14 (var -> ID indice .)
    REPITA          reduce using rule 14 (var -> ID indice .)
    LEIA            reduce using rule 14 (var -> ID indice .)
    ESCREVA         reduce using rule 14 (var -> ID indice .)
    RETORNA         reduce using rule 14 (var -> ID indice .)
    NOTACAO_CIENTIFICA reduce using rule 14 (var -> ID indice .)
    ENTAO           reduce using rule 14 (var -> ID indice .)
    ATE             reduce using rule 14 (var -> ID indice .)
    SENAO           reduce using rule 14 (var -> ID indice .)
    ABRE_COL        shift and go to state 42

  ! ABRE_COL        [ reduce using rule 14 (var -> ID indice .) ]


state 18

    (21) cabecalho -> ID ABRE_PAR . lista_parametros FECHA_PAR corpo FIM
    (22) lista_parametros -> . lista_parametros VIRGULA parametro
    (23) lista_parametros -> . parametro
    (24) lista_parametros -> . vazio
    (25) parametro -> . tipo DOIS_PONTOS ID
    (26) parametro -> . parametro ABRE_COL FECHA_COL
    (81) vazio -> .
    (17) tipo -> . INTEIRO
    (18) tipo -> . FLUTUANTE

    FECHA_PAR       reduce using rule 81 (vazio -> .)
    VIRGULA         reduce using rule 81 (vazio -> .)
    INTEIRO         shift and go to state 3
    FLUTUANTE       shift and go to state 4

    tipo                           shift and go to state 46
    lista_parametros               shift and go to state 43
    parametro                      shift and go to state 45
    vazio                          shift and go to state 44

state 19

    (16) indice -> ABRE_COL . expressao FECHA_COL
    (45) expressao -> . expressao_logica
    (46) expressao -> . atribuicao
    (47) expressao_logica -> . expressao_simples
    (48) expressao_logica -> . expressao_logica operador_logico expressao_simples
    (41) atribuicao -> . var ATRIBUT expressao
    (49) expressao_simples -> . expressao_aditiva
    (50) expressao_simples -> . expressao_simples operador_relacional expressao_aditiva
    (13) var -> . ID
    (14) var -> . ID indice
    (51) expressao_aditiva -> . expressao_multiplicativa
    (52) expressao_aditiva -> . expressao_aditiva operador_soma expressao_multiplicativa
    (53) expressao_multiplicativa -> . expressao_unaria
    (54) expressao_multiplicativa -> . expressao_multiplicativa operador_multiplicacao expressao_unaria
    (55) expressao_unaria -> . fator
    (56) expressao_unaria -> . operador_soma fator
    (70) fator -> . ABRE_COL expressao FECHA_COL
    (71) fator -> . var
    (72) fator -> . chamada_funcao
    (73) fator -> . numero
    (66) operador_soma -> . SOMA
    (67) operador_soma -> . SUB
    (77) chamada_funcao -> . ID ABRE_PAR lista_argumentos FECHA_PAR
    (74) numero -> . INTEIRO
    (75) numero -> . FLUTUANTE
    (76) numero -> . NOTACAO_CIENTIFICA

    ID              shift and go to state 38
    ABRE_COL        shift and go to state 39
    SOMA            shift and go to state 30
    SUB             shift and go to state 24
    INTEIRO         shift and go to state 40
    FLUTUANTE       shift and go to state 28
    NOTACAO_CIENTIFICA shift and go to state 35

    atribuicao                     shift and go to state 23
    expressao_multiplicativa       shift and go to state 37
    expressao_aditiva              shift and go to state 26
    expressao_unaria               shift and go to state 27
    operador_soma                  shift and go to state 29
    numero                         shift and go to state 31
    fator                          shift and go to state 32
    chamada_funcao                 shift and go to state 41
    expressao_logica               shift and go to state 25
    expressao                      shift and go to state 47
    var                            shift and go to state 33
    expressao_simples              shift and go to state 34

state 20

    (8) declaracao_variaveis -> tipo DOIS_PONTOS . lista_variaveis
    (9) declaracao_variaveis -> tipo DOIS_PONTOS . error
    (11) lista_variaveis -> . var VIRGULA lista_variaveis
    (12) lista_variaveis -> . var
    (13) var -> . ID
    (14) var -> . ID indice

    error           shift and go to state 49
    ID              shift and go to state 51

    lista_variaveis                shift and go to state 50
    var                            shift and go to state 48

state 21

    (19) declaracao_funcao -> tipo cabecalho .

    INTEIRO         reduce using rule 19 (declaracao_funcao -> tipo cabecalho .)
    FLUTUANTE       reduce using rule 19 (declaracao_funcao -> tipo cabecalho .)
    ID              reduce using rule 19 (declaracao_funcao -> tipo cabecalho .)
    $end            reduce using rule 19 (declaracao_funcao -> tipo cabecalho .)


state 22

    (21) cabecalho -> ID . ABRE_PAR lista_parametros FECHA_PAR corpo FIM

    ABRE_PAR        shift and go to state 18


state 23

    (46) expressao -> atribuicao .

    ENTAO           reduce using rule 46 (expressao -> atribuicao .)
    FIM             reduce using rule 46 (expressao -> atribuicao .)
    error           reduce using rule 46 (expressao -> atribuicao .)
    SE              reduce using rule 46 (expressao -> atribuicao .)
    REPITA          reduce using rule 46 (expressao -> atribuicao .)
    LEIA            reduce using rule 46 (expressao -> atribuicao .)
    ESCREVA         reduce using rule 46 (expressao -> atribuicao .)
    RETORNA         reduce using rule 46 (expressao -> atribuicao .)
    INTEIRO         reduce using rule 46 (expressao -> atribuicao .)
    FLUTUANTE       reduce using rule 46 (expressao -> atribuicao .)
    ID              reduce using rule 46 (expressao -> atribuicao .)
    ABRE_COL        reduce using rule 46 (expressao -> atribuicao .)
    SOMA            reduce using rule 46 (expressao -> atribuicao .)
    SUB             reduce using rule 46 (expressao -> atribuicao .)
    NOTACAO_CIENTIFICA reduce using rule 46 (expressao -> atribuicao .)
    ATE             reduce using rule 46 (expressao -> atribuicao .)
    SENAO           reduce using rule 46 (expressao -> atribuicao .)
    FECHA_COL       reduce using rule 46 (expressao -> atribuicao .)
    FECHA_PAR       reduce using rule 46 (expressao -> atribuicao .)
    VIRGULA         reduce using rule 46 (expressao -> atribuicao .)
    $end            reduce using rule 46 (expressao -> atribuicao .)


state 24

    (67) operador_soma -> SUB .

    ABRE_COL        reduce using rule 67 (operador_soma -> SUB .)
    ID              reduce using rule 67 (operador_soma -> SUB .)
    INTEIRO         reduce using rule 67 (operador_soma -> SUB .)
    FLUTUANTE       reduce using rule 67 (operador_soma -> SUB .)
    NOTACAO_CIENTIFICA reduce using rule 67 (operador_soma -> SUB .)
    SOMA            reduce using rule 67 (operador_soma -> SUB .)
    SUB             reduce using rule 67 (operador_soma -> SUB .)


state 25

    (45) expressao -> expressao_logica .
    (48) expressao_logica -> expressao_logica . operador_logico expressao_simples
    (64) operador_logico -> . E_LOGICO
    (65) operador_logico -> . OU_LOGICO

    ENTAO           reduce using rule 45 (expressao -> expressao_logica .)
    FIM             reduce using rule 45 (expressao -> expressao_logica .)
    error           reduce using rule 45 (expressao -> expressao_logica .)
    SE              reduce using rule 45 (expressao -> expressao_logica .)
    REPITA          reduce using rule 45 (expressao -> expressao_logica .)
    LEIA            reduce using rule 45 (expressao -> expressao_logica .)
    ESCREVA         reduce using rule 45 (expressao -> expressao_logica .)
    RETORNA         reduce using rule 45 (expressao -> expressao_logica .)
    INTEIRO         reduce using rule 45 (expressao -> expressao_logica .)
    FLUTUANTE       reduce using rule 45 (expressao -> expressao_logica .)
    ID              reduce using rule 45 (expressao -> expressao_logica .)
    ABRE_COL        reduce using rule 45 (expressao -> expressao_logica .)
    SOMA            reduce using rule 45 (expressao -> expressao_logica .)
    SUB             reduce using rule 45 (expressao -> expressao_logica .)
    NOTACAO_CIENTIFICA reduce using rule 45 (expressao -> expressao_logica .)
    ATE             reduce using rule 45 (expressao -> expressao_logica .)
    SENAO           reduce using rule 45 (expressao -> expressao_logica .)
    FECHA_COL       reduce using rule 45 (expressao -> expressao_logica .)
    FECHA_PAR       reduce using rule 45 (expressao -> expressao_logica .)
    VIRGULA         reduce using rule 45 (expressao -> expressao_logica .)
    $end            reduce using rule 45 (expressao -> expressao_logica .)
    E_LOGICO        shift and go to state 52
    OU_LOGICO       shift and go to state 53

    operador_logico                shift and go to state 54

state 26

    (49) expressao_simples -> expressao_aditiva .
    (52) expressao_aditiva -> expressao_aditiva . operador_soma expressao_multiplicativa
    (66) operador_soma -> . SOMA
    (67) operador_soma -> . SUB

  ! shift/reduce conflict for SOMA resolved as shift
  ! shift/reduce conflict for SUB resolved as shift
    MENOR           reduce using rule 49 (expressao_simples -> expressao_aditiva .)
    MAIOR           reduce using rule 49 (expressao_simples -> expressao_aditiva .)
    IGUAL           reduce using rule 49 (expressao_simples -> expressao_aditiva .)
    DIFERENCA       reduce using rule 49 (expressao_simples -> expressao_aditiva .)
    MENOR_IGUAL     reduce using rule 49 (expressao_simples -> expressao_aditiva .)
    MAIOR_IGUAL     reduce using rule 49 (expressao_simples -> expressao_aditiva .)
    NEGACAO         reduce using rule 49 (expressao_simples -> expressao_aditiva .)
    E_LOGICO        reduce using rule 49 (expressao_simples -> expressao_aditiva .)
    OU_LOGICO       reduce using rule 49 (expressao_simples -> expressao_aditiva .)
    FECHA_COL       reduce using rule 49 (expressao_simples -> expressao_aditiva .)
    INTEIRO         reduce using rule 49 (expressao_simples -> expressao_aditiva .)
    FLUTUANTE       reduce using rule 49 (expressao_simples -> expressao_aditiva .)
    ID              reduce using rule 49 (expressao_simples -> expressao_aditiva .)
    $end            reduce using rule 49 (expressao_simples -> expressao_aditiva .)
    FECHA_PAR       reduce using rule 49 (expressao_simples -> expressao_aditiva .)
    VIRGULA         reduce using rule 49 (expressao_simples -> expressao_aditiva .)
    FIM             reduce using rule 49 (expressao_simples -> expressao_aditiva .)
    error           reduce using rule 49 (expressao_simples -> expressao_aditiva .)
    SE              reduce using rule 49 (expressao_simples -> expressao_aditiva .)
    REPITA          reduce using rule 49 (expressao_simples -> expressao_aditiva .)
    LEIA            reduce using rule 49 (expressao_simples -> expressao_aditiva .)
    ESCREVA         reduce using rule 49 (expressao_simples -> expressao_aditiva .)
    RETORNA         reduce using rule 49 (expressao_simples -> expressao_aditiva .)
    ABRE_COL        reduce using rule 49 (expressao_simples -> expressao_aditiva .)
    NOTACAO_CIENTIFICA reduce using rule 49 (expressao_simples -> expressao_aditiva .)
    ENTAO           reduce using rule 49 (expressao_simples -> expressao_aditiva .)
    ATE             reduce using rule 49 (expressao_simples -> expressao_aditiva .)
    SENAO           reduce using rule 49 (expressao_simples -> expressao_aditiva .)
    SOMA            shift and go to state 30
    SUB             shift and go to state 24

  ! SOMA            [ reduce using rule 49 (expressao_simples -> expressao_aditiva .) ]
  ! SUB             [ reduce using rule 49 (expressao_simples -> expressao_aditiva .) ]

    operador_soma                  shift and go to state 55

state 27

    (53) expressao_multiplicativa -> expressao_unaria .

    MULT            reduce using rule 53 (expressao_multiplicativa -> expressao_unaria .)
    DIVISAO         reduce using rule 53 (expressao_multiplicativa -> expressao_unaria .)
    SOMA            reduce using rule 53 (expressao_multiplicativa -> expressao_unaria .)
    SUB             reduce using rule 53 (expressao_multiplicativa -> expressao_unaria .)
    MENOR           reduce using rule 53 (expressao_multiplicativa -> expressao_unaria .)
    MAIOR           reduce using rule 53 (expressao_multiplicativa -> expressao_unaria .)
    IGUAL           reduce using rule 53 (expressao_multiplicativa -> expressao_unaria .)
    DIFERENCA       reduce using rule 53 (expressao_multiplicativa -> expressao_unaria .)
    MENOR_IGUAL     reduce using rule 53 (expressao_multiplicativa -> expressao_unaria .)
    MAIOR_IGUAL     reduce using rule 53 (expressao_multiplicativa -> expressao_unaria .)
    NEGACAO         reduce using rule 53 (expressao_multiplicativa -> expressao_unaria .)
    E_LOGICO        reduce using rule 53 (expressao_multiplicativa -> expressao_unaria .)
    OU_LOGICO       reduce using rule 53 (expressao_multiplicativa -> expressao_unaria .)
    FECHA_COL       reduce using rule 53 (expressao_multiplicativa -> expressao_unaria .)
    FIM             reduce using rule 53 (expressao_multiplicativa -> expressao_unaria .)
    error           reduce using rule 53 (expressao_multiplicativa -> expressao_unaria .)
    SE              reduce using rule 53 (expressao_multiplicativa -> expressao_unaria .)
    REPITA          reduce using rule 53 (expressao_multiplicativa -> expressao_unaria .)
    LEIA            reduce using rule 53 (expressao_multiplicativa -> expressao_unaria .)
    ESCREVA         reduce using rule 53 (expressao_multiplicativa -> expressao_unaria .)
    RETORNA         reduce using rule 53 (expressao_multiplicativa -> expressao_unaria .)
    INTEIRO         reduce using rule 53 (expressao_multiplicativa -> expressao_unaria .)
    FLUTUANTE       reduce using rule 53 (expressao_multiplicativa -> expressao_unaria .)
    ID              reduce using rule 53 (expressao_multiplicativa -> expressao_unaria .)
    ABRE_COL        reduce using rule 53 (expressao_multiplicativa -> expressao_unaria .)
    NOTACAO_CIENTIFICA reduce using rule 53 (expressao_multiplicativa -> expressao_unaria .)
    ENTAO           reduce using rule 53 (expressao_multiplicativa -> expressao_unaria .)
    $end            reduce using rule 53 (expressao_multiplicativa -> expressao_unaria .)
    FECHA_PAR       reduce using rule 53 (expressao_multiplicativa -> expressao_unaria .)
    VIRGULA         reduce using rule 53 (expressao_multiplicativa -> expressao_unaria .)
    ATE             reduce using rule 53 (expressao_multiplicativa -> expressao_unaria .)
    SENAO           reduce using rule 53 (expressao_multiplicativa -> expressao_unaria .)


state 28

    (75) numero -> FLUTUANTE .
